# orca-linux

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  install.sh
.github/workflows/: ci.yml
packaging/: orca.desktop  orca.service
plasmoid/: metadata.json
plasmoid/contents/ui/: main.qml
scripts/: release.sh
src/: args.rs  badge.rs  main.rs  paths.rs  popup.rs  protocol.rs  socket.rs  state_store.rs  terminal.rs  transcript.rs  tray.rs  ui_state.rs  version.rs  ws.rs
src/cli/: event.rs  event_builder.rs  hooks.rs  mod.rs  update.rs  wrap.rs
src/daemon/: focus.rs  mod.rs  notify.rs  prefs.rs  store.rs  title_refresher.rs
