[package]
name = "orca"
version = "0.2.1"
edition = "2021"
description = "Tray status tracker for CLI AI agents — Linux port of Orca for macOS"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
libc = "0.2"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
notify-rust = "4.18.0"
ksni = { version = "0.3.5", features = ["blocking"] }
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true

[build-dependencies]
png = "0.18.1"
